--- a/content/pelican 網誌.html
+++ b/content/pelican 網誌.html
@@ -61,8 +61,8 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='.html'></a><li><a href='Onshape操作影片.html'>Onshape操作影片</a><ul><li><a href='Week1.html'>Week1</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section> <a href='CMSimfly 網站.html'>Next</a> >> CMSimfly 網站<br /><h1>40623228網站簡介</h1>
-<p>計算機程式與電腦輔助設計實習課程</p>
-<p></p>
-<p></p>
-<br /> <a href='CMSimfly 網站.html'>Next</a> >> CMSimfly 網站</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='.html'></a><li><a href='Onshape操作影片.html'>Onshape操作影片</a><ul><li><a href='Week1.html'>Week1</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section>reveal 投影片 << <a href='reveal 投影片.html'>Previous</a> <a href='.html'>Next</a> >> <br /><h1>pelican 網誌</h1>
+<p>以 <a href="http://www.leoeditor.com/">Leo Editor</a> 開啟 config/pelican.leo&nbsp;</p>
+<p>各分組必須自行更改&nbsp;@edit pelicanconf.py 中的 AUTHOR 與 SITENAME</p>
+<p>更改 @edit publishconf.py 中的 SITEURL</p>
+<br />reveal 投影片 << <a href='reveal 投影片.html'>Previous</a> <a href='.html'>Next</a> >> </section></div></body></html>
