--- a/content/40623228網站簡介.html
+++ b/content/40623228網站簡介.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
-<title>2018 Fall 分組網站</title> <link rel="stylesheet" type="text/css" href="./../static/cmsimply.css">
+<title>CMSimfly</title> <link rel="stylesheet" type="text/css" href="./../static/cmsimply.css">
 
 <script type="text/javascript" src="./../static/syntaxhighlighter/shCore.js"></script>
 <script type="text/javascript" src="./../static/syntaxhighlighter/shBrushJScript.js"></script>
@@ -17,6 +17,7 @@
 <link type="text/css" rel="stylesheet" href="./../static/syntaxhighlighter/css/shCoreDefault.css"/>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
 
+<!-- for LaTeX equations 暫時不用
 <script src="https://scrum-3.github.io/web/math/MathJax.js?config=TeX-MML-AM_CHTML" type="text/javascript"></script>
 <script type="text/javascript">
 init_mathjax = function() {
@@ -37,12 +38,17 @@ init_mathjax = function() {
 }
 init_mathjax();
 </script>
+-->
+<!-- 暫時不用
 <script src="./../static/fengari-web.js"></script>
 <script type="text/javascript" src="./../static/Cango-13v08-min.js"></script>
 <script type="text/javascript" src="./../static/CangoAxes-4v01-min.js"></script>
 <script type="text/javascript" src="./../static/gearUtils-05.js"></script>
+-->
+<!-- for Brython 暫時不用
 <script src="https://scrum-3.github.io/web/brython/brython.js"></script>
 <script src="https://scrum-3.github.io/web/brython/brython_stdlib.js"></script>
+-->
 
 <script src="./../static/jquery.js"></script>
 <script type="text/javascript">
@@ -61,8 +67,15 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站.html'>CMSimfly 網站</a><li><a href='reveal 投影片.html'>reveal 投影片</a><li><a href='pelican 網誌.html'>pelican 網誌</a></li></ul><li><a href='.html'></a><li><a href='Onshape操作影片.html'>Onshape操作影片</a><ul><li><a href='Week1.html'>Week1</a></li></ul><li><a href='Python 手冊.html'>Python 手冊</a><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Fusion 360.html'>Fusion 360</a></li></ul></nav><section> <a href='CMSimfly 網站.html'>Next</a> >> CMSimfly 網站<br /><h1>40623228網站簡介</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='Onshape操作影片.html'>Onshape操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介<br /><h1>40623228網站簡介</h1>
 <p>計算機程式與電腦輔助設計實習課程</p>
-<p></p>
-<p></p>
-<br /> <a href='CMSimfly 網站.html'>Next</a> >> CMSimfly 網站</section></div></body></html>
+<p><a href="#h_5025156321541672327924">40623228_CMSimfly 網站_簡介</a></p>
+<p><a href="#h_122925130171541672366568">40623228_pelican 網誌_簡介</a></p>
+<p>-----------------------------------------------------------------------</p>
+<p><a href="#h_693891964321541672465150">Onshape操作影片_簡介_各週連結</a></p>
+<p>-----------------------------------------------------------------------</p>
+<p><a href="#h_706875887681541672783910">OnShape 相關教材_教材連結</a></p>
+<p>-----------------------------------------------------------------------</p>
+<p><a href="#h_515769947551541672589670">Python 手冊_簡介_教材連結</a></p>
+<p>-----------------------------------------------------------------------</p>
+<br /> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介</section></div></body></html>
