--- a/config/content.htm
+++ b/config/content.htm
@@ -1,13 +1,13 @@
 <h1>40623228網站簡介</h1>
 <p>計算機程式與電腦輔助設計實習課程</p>
-<p><a href="/get_page/CMSimfly%20網站%20簡介">40623228_CMSimfly 網站_簡介</a></p>
-<p><a href="https://mdecadp2018.github.io/site-40623228/content/pelican%20%E7%B6%B2%E8%AA%8C%C2%A0%E7%B0%A1%E4%BB%8B.html">40623228_pelican 網誌_簡介</a></p>
+<p><a href="/site-40623228/content/CMSimfly%20網站%20簡介.html">40623228_CMSimfly 網站_簡介</a></p>
+<p><a href="/site-40623228/content/pelican%20網誌%C2%A0簡介.html">40623228_pelican 網誌_簡介</a></p>
 <p>-----------------------------------------------------------------------</p>
-<p><a href="/content/Onshape操作影片.html">Onshape操作影片_簡介_各週連結</a></p>
+<p><a href="/site-40623228/content/Onshape操作影片.html">Onshape操作影片_簡介_各週連結</a></p>
 <p>-----------------------------------------------------------------------</p>
-<p><a href="#h_706875887681541672783910">OnShape 相關教材_教材連結</a></p>
+<p><a href="/site-40623228/content/OnShape%20相關教材.html">OnShape 相關教材_教材連結</a></p>
 <p>-----------------------------------------------------------------------</p>
-<p><a href="#h_515769947551541672589670">Python 手冊_簡介_教材連結</a></p>
+<p><a href="/site-40623228/content/Python%20手冊.html">Python 手冊_簡介_教材連結</a></p>
 <p>-----------------------------------------------------------------------</p>
 <h2 id="h_5025156321541672327924">CMSimfly 網站 簡介</h2>
 <p style="text-align: left;"> 在網站中放置這學期所拍攝的影片或課程相關資料</p>
