--- a/config/content.htm
+++ b/config/content.htm
@@ -9,6 +9,9 @@
 <p>-----------------------------------------------------------------------</p>
 <p><a href="/site-40623228/content/Python%20手冊.html">Python 手冊_簡介_教材連結</a></p>
 <p>-----------------------------------------------------------------------</p>
+<pre>40623228計算機程式與電腦輔助設計實習 課程倉儲<br/><a href="https://github.com/mdecadp2018/site-40623228">https://github.com/mdecadp2018/site-40623228</a>
+
+cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
 <h2 id="h_5025156321541672327924">CMSimfly 網站 簡介</h2>
 <p style="text-align: left;"> 在網站中放置這學期所拍攝的影片或課程相關資料</p>
 <h2>pelican 網誌 簡介</h2>
