--- a/content/40623228網站簡介.html
+++ b/content/40623228網站簡介.html
@@ -78,4 +78,7 @@ $(function(){
 <p>-----------------------------------------------------------------------</p>
 <p><a href="/site-40623228/content/Python%20手冊.html">Python 手冊_簡介_教材連結</a></p>
 <p>-----------------------------------------------------------------------</p>
+<pre>40623228計算機程式與電腦輔助設計實習 課程倉儲<br/><a href="https://github.com/mdecadp2018/site-40623228">https://github.com/mdecadp2018/site-40623228</a>
+
+cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
 <br /> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介</section></div></body></html>
