cmsimfly edit Week1-9

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -9,23 +9,26 @@
 <p>-----------------------------------------------------------------------</p>
 <p><a href="/site-40623228/content/Python%20手冊.html">Python 手冊_簡介_教材連結</a></p>
 <p>-----------------------------------------------------------------------</p>
-<pre>40623228計算機程式與電腦輔助設計實習 課程倉儲
-
-40623228網誌: <a href="https://mdecadp2018.github.io/site-40623228/blog">https://mdecadp2018.github.io/site-40623228/blog</a>
-
-40623228網站: <a href="https://mdecadp2018.github.io/site-40623228">https://mdecadp2018.github.io/site-40623228</a>
-
-40623228網頁簡報: <a href="https://mdecadp2018.github.io/site-40623228/reveal/">https://mdecadp2018.github.io/site-40623228/reveal/</a>
+<pre>40623228計算機程式與電腦輔助設計實習 課程倉儲<br/><a href="https://github.com/mdecadp2018/site-40623228">https://github.com/mdecadp2018/site-40623228</a>
 
 cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
-<h2 id="h_5025156321541672327924">CMSimfly 網站 簡介</h2>
+<h2>CMSimfly 網站 簡介</h2>
 <p style="text-align: left;"> 在網站中放置這學期所拍攝的影片或課程相關資料</p>
 <h2>pelican 網誌 簡介</h2>
 <p>在網誌中放置拍攝操作影片前或進行中遇到的問題與</p>
 <p>閱讀Onshape的相關資料時遇到部會的單字</p>
-<h1 id="h_693891964321541672465150">Onshape操作影片</h1>
-<p>每週各分組組員必須將參與分組協同過程之電腦操作流程錄成影片後, 上傳至各自的 Youtube 帳號區, 並嵌入各分組網站頁面中.</p>
-<h2>Week1</h2>
+<h1>Onshape操作影片</h1>
+<p>將各週的實際操作影片放在這</p>
+<h4><strong><a href="/site-40623228/content/Week1.html">Week-1:</a></strong></h4>
+<p><strong>1.練習github.io建立個人網站  2.</strong><strong>管理個人網站內容及投影片</strong></p>
+<h4><strong><a href="/site-40623228/content/Week2.html">Week-2:</a></strong></h4>
+<h4><strong><a href="/site-40623228/content/Week3.html">Week-3:</a></strong></h4>
+<h4><strong><a href="/site-40623228/content/Week4.html">Week-4:</a></strong></h4>
+<h4><strong><a href="/site-40623228/content/Week5.html">Week-5:</a></strong></h4>
+<h4><strong><a href="/site-40623228/content/Week6.html">Week-6:</a></strong></h4>
+<h4><strong><a href="/site-40623228/content/Week7.html">Week-7:</a></strong></h4>
+<h4><strong><a href="/site-40623228/content/Week8.html">Week-8:</a></strong></h4>
+<h4><strong><a href="/site-40623228/content/Week9.html">Week-9:</a></strong></h4><h2>Week1</h2>
 <p><span>國立虎尾科技大學機械設計工程系計算機程式 - 一乙第八週第三部分, 說明如何利用 Eric6 IDE 建立所需的 calculator 計算機程式對話表單. 過程中主要學習如何啟動 Eric6, 如何建立 Eric6 專案, 如何切換 Sources tab 與 Form tab, 如何在進入 Qt Designer 後利用格點布局, 建立按鈕與 Line Edit 部件.</span></p>
 <p><iframe allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/g4ksXq7sQ4M" width="560"></iframe></p>
 <h2>Week2</h2>
@@ -44,10 +47,10 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
 <p>onshape</p>
 <h2>Week9</h2>
 <p>onshape</p>
-<h1 id="h_706875887681541672783910">OnShape 相關教材</h1>
+<h1>OnShape 相關教材</h1>
 <p><a href="https://www.onshape.com/">https://www.onshape.com/</a> </p>
 <p>電腦輔助設計實習課程教材: <a href="http://mde.tw/cadp2018/content/">http://mde.tw/cadp2018/content/</a> </p>
-<h1 id="h_515769947551541672589670">Python 手冊</h1>
+<h1>Python 手冊</h1>
 <p>計算機程式教材:  <a href="http://mde.tw/cp2018/content/">http://mde.tw/cp2018/content/</a> </p>
 <p>可攜程式下載: <a href="https://drive.google.com/file/d/1DWtyoUhl8CycKJ8uulB3viRXE39KqpE1/view?usp=sharing">p37.7z</a></p>
 <p></p>
