--- a/content/40623228網站簡介.html
+++ b/content/40623228網站簡介.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
-<title>CMSimfly</title> <link rel="stylesheet" type="text/css" href="./../static/cmsimply.css">
+<title>設計二乙_陳永錩_40623228_CMSimfly網站</title> <link rel="stylesheet" type="text/css" href="./../static/cmsimply.css">
 
 <script type="text/javascript" src="./../static/syntaxhighlighter/shCore.js"></script>
 <script type="text/javascript" src="./../static/syntaxhighlighter/shBrushJScript.js"></script>
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='Onshape操作影片.html'>Onshape操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介<br /><h1>40623228網站簡介</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介<br /><h1>40623228網站簡介</h1>
 <p>計算機程式與電腦輔助設計實習課程</p>
 <p><a href="/site-40623228/content/CMSimfly%20網站%20簡介.html">40623228_CMSimfly 網站_簡介</a></p>
 <p><a href="/site-40623228/content/pelican%20網誌%C2%A0簡介.html">40623228_pelican 網誌_簡介</a></p>
