--- a/content/Week2.html
+++ b/content/Week2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
-<title>CMSimfly</title> <link rel="stylesheet" type="text/css" href="./../static/cmsimply.css">
+<title>設計二乙_陳永錩_40623228_CMSimfly網站</title> <link rel="stylesheet" type="text/css" href="./../static/cmsimply.css">
 
 <script type="text/javascript" src="./../static/syntaxhighlighter/shCore.js"></script>
 <script type="text/javascript" src="./../static/syntaxhighlighter/shBrushJScript.js"></script>
@@ -67,6 +67,6 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='Onshape操作影片.html'>Onshape操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>Week1 << <a href='Week1.html'>Previous</a> <a href='Week3.html'>Next</a> >> Week3<br /><h1>Week2</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>Week1 << <a href='Week1.html'>Previous</a> <a href='Week3.html'>Next</a> >> Week3<br /><h1>Week2</h1>
 <p>onshape</p>
 <br />Week1 << <a href='Week1.html'>Previous</a> <a href='Week3.html'>Next</a> >> Week3</section></div></body></html>
