--- a/content/各週操作影片.html
+++ b/content/各週操作影片.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
-<title>CMSimfly</title> <link rel="stylesheet" type="text/css" href="./../static/cmsimply.css">
+<title>設計二乙_陳永錩_40623228_CMSimfly網站</title> <link rel="stylesheet" type="text/css" href="./../static/cmsimply.css">
 
 <script type="text/javascript" src="./../static/syntaxhighlighter/shCore.js"></script>
 <script type="text/javascript" src="./../static/syntaxhighlighter/shBrushJScript.js"></script>
@@ -67,6 +67,30 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='Onshape操作影片.html'>Onshape操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>pelican 網誌 簡介 << <a href='pelican 網誌 簡介.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>Onshape操作影片</h1>
-<p>每週各分組組員必須將參與分組協同過程之電腦操作流程錄成影片後, 上傳至各自的 Youtube 帳號區, 並嵌入各分組網站頁面中.</p>
-<br />pelican 網誌 簡介 << <a href='pelican 網誌 簡介.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>pelican 網誌 簡介 << <a href='pelican 網誌 簡介.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>各週操作影片</h1>
+<p>將各週的操作影片放在這</p>
+<h4><strong><a href="/site-40623228/content/Week1.html">Week-1:</a></strong></h4>
+<p><strong>練習github.io建立個人網站 </strong></p>
+<h4><strong><a href="/site-40623228/content/Week2.html">Week-2:</a></strong></h4>
+<p><strong>管理個人網站內容及投影片</strong></p>
+<p><strong><span>領取課程倉儲</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week3.html">Week-3:</a></strong></h4>
+<p><strong><span>~~~中秋節放假~~~</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week4.html">Week-4:</a></strong></h4>
+<p><strong><span>Onshape 說明</span></strong></p>
+<p><strong><span>Onshape Week1</span></strong></p>
+<p><strong><span>Onshape Week1  homework</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week5.html">Week-5:</a></strong></h4>
+<p><strong><span>Onshape Week2</span></strong></p>
+<p><strong><span>Onshape Week2  homework</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week6.html">Week-6:</a></strong></h4>
+<p><strong><span>說明如何升級最新的CMSimfly倉儲中的flaskapp.py</span></strong></p>
+<p><strong><span>Onshape Week3</span></strong></p>
+<p><strong><span>Onshape Week3  homework</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week7.html">Week-7:</a></strong></h4>
+<p><strong><span>說明如何利用Virtualbox安裝 Ubuntu18.04.1伺服器，目的在自行建立Fossil SCM</span></strong></p>
+<h4><strong><a href="/site-40623228/content/Week8.html">Week-8:</a></strong></h4>
+<p><strong><span>說明機電資整合設計專案流程所需的相關套件運用與技術</span></strong><strong></strong></p>
+<h4><strong><a href="/site-40623228/content/Week9.html">Week-9:</a></strong></h4>
+<p><strong>期中自評</strong></p>
+<p><strong>期末分組</strong></p><br />pelican 網誌 簡介 << <a href='pelican 網誌 簡介.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</section></div></body></html>
