cmsimfly edit Week1-4 content

--- a/config/content.htm
+++ b/config/content.htm
@@ -3,7 +3,7 @@
 <p><a href="/site-40623228/content/CMSimfly%20網站%20簡介.html">40623228_CMSimfly 網站_簡介</a></p>
 <p><a href="/site-40623228/content/pelican%20網誌%C2%A0簡介.html">40623228_pelican 網誌_簡介</a></p>
 <p>-----------------------------------------------------------------------</p>
-<p><a href="/site-40623228/content/Onshape操作影片.html">Onshape操作影片_簡介_各週連結</a></p>
+<p><a href="/site-40623228/content/各週操作影片.html">各週操作影片_簡介_各週連結</a></p>
 <p>-----------------------------------------------------------------------</p>
 <p><a href="/site-40623228/content/OnShape%20相關教材.html">OnShape 相關教材_教材連結</a></p>
 <p>-----------------------------------------------------------------------</p>
@@ -11,8 +11,7 @@
 <p>-----------------------------------------------------------------------</p>
 <pre>40623228計算機程式與電腦輔助設計實習 課程倉儲<br/><a href="https://github.com/mdecadp2018/site-40623228">https://github.com/mdecadp2018/site-40623228</a>
 
-cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
-<h2>CMSimfly 網站 簡介</h2>
+cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><h2>CMSimfly 網站 簡介</h2>
 <p style="text-align: left;"> 在網站中放置這學期所拍攝的影片或課程相關資料</p>
 <h2>pelican 網誌 簡介</h2>
 <p>在網誌中放置拍攝操作影片前或進行中遇到的問題與</p>
@@ -22,8 +21,8 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
 <h4><strong><a href="/site-40623228/content/Week1.html">Week-1:</a></strong></h4>
 <p><strong>練習github.io建立個人網站 </strong></p>
 <h4><strong><a href="/site-40623228/content/Week2.html">Week-2:</a></strong></h4>
-<p><strong>管理個人網站內容及投影片</strong></p>
 <p><strong><span>領取課程倉儲</span></strong></p>
+<p><strong>管理個人網站內容及投影片</strong></p>
 <h4><strong><a href="/site-40623228/content/Week3.html">Week-3:</a></strong></h4>
 <p><strong><span>~~~中秋節放假~~~</span></strong></p>
 <h4><strong><a href="/site-40623228/content/Week4.html">Week-4:</a></strong></h4>
@@ -44,15 +43,27 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
 <h4><strong><a href="/site-40623228/content/Week9.html">Week-9:</a></strong></h4>
 <p><strong>期中自評</strong></p>
 <p><strong>期末分組</strong></p><h2>Week1</h2>
-<p><span>國立虎尾科技大學機械設計工程系計算機程式 - 一乙第八週第三部分, 說明如何利用 Eric6 IDE 建立所需的 calculator 計算機程式對話表單. 過程中主要學習如何啟動 Eric6, 如何建立 Eric6 專案, 如何切換 Sources tab 與 Form tab, 如何在進入 Qt Designer 後利用格點布局, 建立按鈕與 Line Edit 部件.</span></p>
-<p><iframe allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/g4ksXq7sQ4M" width="560"></iframe></p>
-<h2>Week2</h2>
-<p>onshape</p>
-<h2>Week3</h2>
-<p>onshape</p>
-<h2>Week4</h2>
-<p>onshape</p>
-<h2>Week5</h2>
+<p><strong>說明如何利用 p37 中的 git 建立個人的 Github Pages 網站</strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/ax2ZuPm3YXc" width="500"></iframe></p><h2>Week2</h2>
+<p><strong><span>領取課程倉儲</span></strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/sD9slKyFNao" width="500"></iframe></p>
+<p></p>
+<p><strong>管理個人網站內容</strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/q_1Ht6CLPWA" width="500"></iframe></p>
+<p></p>
+<p><strong>管理個人投影片</strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/3SR7vom0YA8" width="500"></iframe></p>
+<p></p><h2>Week3</h2>
+<p><strong><span>~~~中秋節放假~~~</span></strong></p><h2>Week4</h2>
+<p><strong><span>Onshape 說明</span></strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/UdYcuRKS6o4" width="500"></iframe></p>
+<p><strong><span>Onshape Week1</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/content/OnshapeWeek%201.html" rel="noopener" target="_blank">2018 電腦輔助設計實習教材 Onshape1-1</a></span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/downloads/1-1-Lesson%20Plan.pdf">1-1-Lesson Plan.pdf</a></span></strong></p>
+<p><strong><span></span></strong></p>
+<p><strong><span>Onshape Week1  homework</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/downloads/1-2-Homework.pdf">1-2-Homework.pdf</a></span></strong></p>
+<p></p><h2>Week5</h2>
 <p>onshape</p>
 <h2>Week6</h2>
 <p>onshape</p>
