--- a/content/Week3.html
+++ b/content/Week3.html
@@ -68,5 +68,4 @@ $(function(){
 </ul>
 </confmenu></header>
 <div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>Week2 << <a href='Week2.html'>Previous</a> <a href='Week4.html'>Next</a> >> Week4<br /><h1>Week3</h1>
-<p>onshape</p>
-<br />Week2 << <a href='Week2.html'>Previous</a> <a href='Week4.html'>Next</a> >> Week4</section></div></body></html>
+<p><strong><span>~~~中秋節放假~~~</span></strong></p><br />Week2 << <a href='Week2.html'>Previous</a> <a href='Week4.html'>Next</a> >> Week4</section></div></body></html>
