--- a/content/Week4.html
+++ b/content/Week4.html
@@ -68,5 +68,12 @@ $(function(){
 </ul>
 </confmenu></header>
 <div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>Week3 << <a href='Week3.html'>Previous</a> <a href='Week5.html'>Next</a> >> Week5<br /><h1>Week4</h1>
-<p>onshape</p>
-<br />Week3 << <a href='Week3.html'>Previous</a> <a href='Week5.html'>Next</a> >> Week5</section></div></body></html>
+<p><strong><span>Onshape 說明</span></strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/UdYcuRKS6o4" width="500"></iframe></p>
+<p><strong><span>Onshape Week1</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/content/OnshapeWeek%201.html" rel="noopener" target="_blank">2018 電腦輔助設計實習教材 Onshape1-1</a></span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018./../downloads/1-1-Lesson%20Plan.pdf">1-1-Lesson Plan.pdf</a></span></strong></p>
+<p><strong><span></span></strong></p>
+<p><strong><span>Onshape Week1  homework</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018./../downloads/1-2-Homework.pdf">1-2-Homework.pdf</a></span></strong></p>
+<p></p><br />Week3 << <a href='Week3.html'>Previous</a> <a href='Week5.html'>Next</a> >> Week5</section></div></body></html>
