--- a/content/index.html
+++ b/content/index.html
@@ -72,7 +72,7 @@ $(function(){
 <p><a href="/site-40623228/content/CMSimfly%20網站%20簡介.html">40623228_CMSimfly 網站_簡介</a></p>
 <p><a href="/site-40623228/content/pelican%20網誌%C2%A0簡介.html">40623228_pelican 網誌_簡介</a></p>
 <p>-----------------------------------------------------------------------</p>
-<p><a href="/site-40623228/content/Onshape操作影片.html">Onshape操作影片_簡介_各週連結</a></p>
+<p><a href="/site-40623228/content/各週操作影片.html">各週操作影片_簡介_各週連結</a></p>
 <p>-----------------------------------------------------------------------</p>
 <p><a href="/site-40623228/content/OnShape%20相關教材.html">OnShape 相關教材_教材連結</a></p>
 <p>-----------------------------------------------------------------------</p>
@@ -80,5 +80,4 @@ $(function(){
 <p>-----------------------------------------------------------------------</p>
 <pre>40623228計算機程式與電腦輔助設計實習 課程倉儲<br/><a href="https://github.com/mdecadp2018/site-40623228">https://github.com/mdecadp2018/site-40623228</a>
 
-cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
-<br /> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介</section></div></body></html>
+cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><br /> <a href='CMSimfly 網站 簡介.html'>Next</a> >> CMSimfly 網站 簡介</section></div></body></html>
