cmsimfly edit Week5-9 content

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -55,16 +55,41 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre><h
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/3SR7vom0YA8" width="500"></iframe></p>
 <p></p><h2>Week3</h2>
 <p><strong><span>~~~中秋節放假~~~</span></strong></p><h2>Week4</h2>
+<p><strong><span>Onshape 說明</span></strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/UdYcuRKS6o4" width="500"></iframe></p>
+<p><strong><span>Onshape Week1</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/content/OnshapeWeek%201.html" rel="noopener" target="_blank">2018 電腦輔助設計實習教材 OnshapeWeek 1</a></span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/downloads/1-1-Lesson%20Plan.pdf">1-1-Lesson Plan.pdf</a></span></strong></p>
+<p><strong><span></span></strong></p>
+<p><strong><span>Onshape Week1  homework</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/downloads/1-2-Homework.pdf">1-2-Homework.pdf</a></span></strong></p>
+<p><a href="https://cad.onshape.com/documents/c28554e4f648233ed223b53d/w/1df334f6179810c3d0af44a0/e/0ad0d33e9882deb1c2dcd530">https://cad.onshape.com/documents/c28554e4f648233ed223b53d/w/1df334f6179810c3d0af44a0/e/0ad0d33e9882deb1c2dcd530</a></p><h2>Week5</h2>
+<p><strong><span>Onshape Week2</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/content/OnshapeWeek%202.html">2018 電腦輔助設計實習教材 OnshapeWeek 2</a></span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/downloads/2-1-Lesson%20Plan.pdf">2-1-Lesson Plan.pdf</a></span></strong></p>
+<p><strong><span>Onshape Week2  homework</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/downloads/2-2-Homework.pdf">2-2-Homework.pdf</a></span></strong></p>
+<p><strong><span><a href="https://cad.onshape.com/documents/570c509de4b0b585da448d8c/w/a187923b0b25e8418f1d75b9/e/fb779d9a569edde8b30114ee">https://cad.onshape.com/documents/570c509de4b0b585da448d8c/w/a187923b0b25e8418f1d75b9/e/fb779d9a569edde8b30114ee</a></span></strong></p>
+<p></p><h2>Week6</h2>
+<p><strong><span>說明如何升級最新的CMSimfly倉儲中的flaskapp.py</span></strong></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/mH_tW3erBqs" width="500"></iframe></p>
+<p><strong><span>Onshape Week3</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/content/OnshapeWeek%203.html">2018 電腦輔助設計實習教材 OnshapeWeek 3</a></span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/downloads/3-1-Lesson%20Plan.pdf">3-1-Lesson Plan.pdf</a></span></strong></p>
+<p><strong><span>Onshape Week3  homework</span></strong></p>
+<p><strong><span><a href="http://mde.tw/cadp2018/downloads/3-2-Homework.pdf">3-2-Homework.pdf</a></span></strong></p>
+<p><a href="https://cad.onshape.com/documents/7b5553135cdf6caafa9a6946/w/549bd8008ce6e8a13dc6b6cf/e/27159315ac3670adb78c8eec">https://cad.onshape.com/documents/7b5553135cdf6caafa9a6946/w/549bd8008ce6e8a13dc6b6cf/e/27159315ac3670adb78c8eec</a></p>
+<p></p><h2>Week7</h2>
 <p>onshape</p>
-<h2>Week5</h2>
+<p></p>
+<p><span>1.說明如何利用Virtualbox安裝 Ubuntu18.04.1伺服器，目的在自行建立Fossil SCM</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/JA75HIMhIgk" width="500"></iframe></p>
+<p></p>
+<p><span>2.展示如何在先前所建立的虛擬Ubuntu 18.04上啟動https協定下的Fossil SCM伺服器</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/JA75HIMhIgk" width="500"></iframe></p>
+<p></p>
+<p><span>3.說明如何利用Fossil SCM建立區域網路中的分散式版次管理系統</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/hCyeqgfh02w" width="500"></iframe></p>
+<p></p><h2>Week8</h2>
 <p>onshape</p>
-<h2>Week6</h2>
-<p>onshape</p>
-<h2>Week7</h2>
-<p>onshape</p>
-<h2>Week8</h2>
-<p>onshape</p>
-<h2>Week9</h2>
+<p><span>說明機電資整合設計專案流程所需的相關套件運用與技術</span><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/yAzfQm2gBEQ" width="500"></iframe></p><h2>Week9</h2>
 <p>onshape</p>
 <h1>OnShape 相關教材</h1>
 <p><a href="https://www.onshape.com/">https://www.onshape.com/</a> </p>
