--- a/reveal/index.html
+++ b/reveal/index.html
@@ -70,7 +70,7 @@ Lua-球與人的位置用內建指令抓取
 
 python-球用影像辨識抓取,人用指令抓取(未完成)
 
-<img src="https://github.com/mdecadp2018/site-40623228/blob/gh-pages/images/drive.PNG"  width="400px">
+<img src="https://mdecadp2018.github.io/site-40623228/images/drive.PNG"  width="400px">
 
     </script>
 </section>
