--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,12 @@
-<h1>40623228網站簡介</h1>
+<h1><span>協同產品設計實習期末考實作影片</span></h1>
+<p><br/><br/></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/hkvC4p9sh-E" width="560"></iframe></span></p>
+<p><span></span></p>
+<p><span></span><a href="https://drive.google.com/file/d/1HGLGlUW1yw75tRcewHNro3bVW171UawC/view?usp=sharing">.ttt檔載點</a></p>
+<p></p>
+<p></p><h1>40623228網站簡介</h1>
 <p>計算機程式與電腦輔助設計實習課程</p>
 <p><a href="/site-40623228/content/CMSimfly%20網站%20簡介.html">40623228_CMSimfly 網站_簡介</a></p>
 <p><a href="/site-40623228/content/pelican%20網誌%C2%A0簡介.html">40623228_pelican 網誌_簡介</a></p>
@@ -70,7 +78,8 @@ cpgx 網站: <a href="https://cpgx.kmol.info">https://cpgx.kmol.info</a></pre>
 <p><strong><span>Onshape bg6 內容-嚙合設計</span></strong></p>
 <h4><strong><a href="/site-40623228/content/Week17.html">Week-17:</a></strong></h4>
 <p><strong>bg6-進度</strong></p>
-<p><strong><span>Onshape bg6 內容-嚙合設計</span></strong></p><h2>Week1</h2>
+<p><strong><span>Onshape bg6 內容-嚙合設計</span></strong></p>
+<h2>Week1</h2>
 <p><strong>說明如何利用 p37 中的 git 建立個人的 Github Pages 網站</strong></p>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="300" src="https://www.youtube.com/embed/ax2ZuPm3YXc" width="500"></iframe></p>
 <h2>Week2</h2>
