--- a/content/各週操作影片.html
+++ b/content/各週操作影片.html
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>pelican 網誌 簡介 << <a href='pelican 網誌 簡介.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>各週操作影片</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='協同產品設計實習期末考實作影片.html'>協同產品設計實習期末考實作影片</a><li><a href='40623228網站簡介.html'>40623228網站簡介</a><ul><li><a href='CMSimfly 網站 簡介.html'>CMSimfly 網站 簡介</a><li><a href='pelican 網誌 簡介.html'>pelican 網誌 簡介</a></li></ul><li><a href='各週操作影片.html'>各週操作影片</a><ul><li><a href='Week1.html'>Week1</a><li><a href='Week2.html'>Week2</a><li><a href='Week3.html'>Week3</a><li><a href='Week4.html'>Week4</a><li><a href='Week5.html'>Week5</a><li><a href='Week6.html'>Week6</a><li><a href='Week7.html'>Week7</a><li><a href='Week8.html'>Week8</a><li><a href='Week9.html'>Week9</a><li><a href='Week10.html'>Week10</a><li><a href='Week11.html'>Week11</a><li><a href='Week12.html'>Week12</a><li><a href='Week13.html'>Week13</a><li><a href='Week14.html'>Week14</a><li><a href='Week15.html'>Week15</a><li><a href='Week16.html'>Week16</a><li><a href='Week17.html'>Week17</a></li></ul><li><a href='OnShape 相關教材.html'>OnShape 相關教材</a><li><a href='Python 手冊.html'>Python 手冊</a></li></ul></nav><section>pelican 網誌 簡介 << <a href='pelican 網誌 簡介.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1<br /><h1>各週操作影片</h1>
 <p>將各週的操作影片放在這</p>
 <h4><strong><a href="/site-40623228/content/Week1.html">Week-1:</a></strong></h4>
 <p><strong>練習github.io建立個人網站 </strong></p>
@@ -120,4 +120,5 @@ $(function(){
 <p><strong><span>Onshape bg6 內容-嚙合設計</span></strong></p>
 <h4><strong><a href="/site-40623228/content/Week17.html">Week-17:</a></strong></h4>
 <p><strong>bg6-進度</strong></p>
-<p><strong><span>Onshape bg6 內容-嚙合設計</span></strong></p><br />pelican 網誌 簡介 << <a href='pelican 網誌 簡介.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</section></div></body></html>
+<p><strong><span>Onshape bg6 內容-嚙合設計</span></strong></p>
+<br />pelican 網誌 簡介 << <a href='pelican 網誌 簡介.html'>Previous</a> <a href='Week1.html'>Next</a> >> Week1</section></div></body></html>
